Change user  profile #12

--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -885,6 +885,85 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 600px) {
+    .profile-icon {
+        width: 35px;
+        height: 35px;
+    }
+    .bottom-sheet-content {
+        max-height: 80vh;
+    }
+    .bottom-sheet-header h3 {
+        font-size: 16px;
+    }
+    .user-list {
+        height: 240px;
+    }
+    .user-list li {
+        font-size: 14px;
+        padding: 12px 15px;
+    }
+    .modal-content {
+        width: 95%;
+        padding: 15px;
+    }
+    .modal-content h3 {
+        font-size: 16px;
+    }
+    .modal-content p {
+        font-size: 14px;
+    }
+    .modal-actions button {
+        padding: 6px 12px;
+        font-size: 14px;
+    }
+    .modal-content select {
+        font-size: 14px;
+        padding: 6px;
+    }
+    .remove-user-btn, .edit-user-btn {
+        width: 20px;
+        height: 20px;
+        font-size: 12px;
+    }
+    .footer-icon img {
+        width: 35px;
+        height: 35px;
+    }
+}
+
+
+
+.footer {
+    z-index: 100;
+}
+
+
+
+
 /* selecting user */
 
 
@@ -973,7 +1052,7 @@
     <div class="footer">
       <a href="#" id="homeButton" class="footer-icon active" aria-label="Home">
           <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-          <span>Home 1</span>
+          <span>Home</span>
       </a>
       <a href="#" id="tasksButton" class="footer-icon" aria-label="Tasks">
           <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
