Change user  profile #14

--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -993,7 +993,7 @@
                 Change Admin Password
             </button>
 
-            <h2 id="welcomeMessage" style="color: var(--primary-color); margin-bottom: 10px;"></h2>
+            <h2 id="welcomeMessage" style="color: var(--primary-color); margin-bottom: 10px; min-height: 1em;">Loading user...</h2>
 
 
             <div class="modal" id="changePasswordModal" style="display: none;">
@@ -1014,7 +1014,7 @@
 
   
             <div class="reward-container">
-                <p><strong>Honey:</strong> <span id="rewardAmount">0</span> 🍯</p>
+                <p><strong>Buzz points:</strong> <span id="rewardAmount">0</span> 🍯</p>
                 <button id="sellButton">Sell Honey</button>
             </div>
         </div>
