--- a/mobile/1-Home/home.html
+++ b/mobile/1-Home/home.html
@@ -429,6 +429,17 @@ body {
         </a>
     </div>
 
+    <!-- Admin Password Modal -->
+<div class="modal" id="adminPasswordModal">
+    <div class="modal-content">
+      <h3>Enter Parent Password</h3>
+      <input type="password" id="adminPasswordField" placeholder="Parent Password" />
+      <button class="login-btn" id="submitAdminPasswordBtn">Submit</button>
+      <div class="error" id="adminPasswordError"></div>
+    </div>
+  </div>
+  
+
     <script>
         // Dynamically highlight the active footer icon
     document.querySelectorAll('.footer a').forEach(link => {
