User has to enter Admin password #11

--- a/mobile/1-Home/home.html
+++ b/mobile/1-Home/home.html
@@ -364,7 +364,7 @@ body {
 <body>
     <div class="header">
         <i class="fas fa-bars menu-icon" aria-label="Menu"></i>
-        <div class="title">BeeMazing 1</div>
+        <div class="title">BeeMazing</div>
     </div>
 
     <div id="logoutContainer" class="logout-container">
@@ -428,17 +428,6 @@ body {
             <span>Create Reward</span>
         </a>
     </div>
-
-    <!-- Admin Password Modal -->
-<div class="modal" id="adminPasswordModal">
-    <div class="modal-content">
-      <h3>Enter Parent Password</h3>
-      <input type="password" id="adminPasswordField" placeholder="Parent Password" />
-      <button class="login-btn" id="submitAdminPasswordBtn">Submit</button>
-      <div class="error" id="adminPasswordError"></div>
-    </div>
-  </div>
-  
 
     <script>
         // Dynamically highlight the active footer icon
