User has to enter Admin password #12

--- a/mobile/1-Home/home.html
+++ b/mobile/1-Home/home.html
@@ -364,7 +364,7 @@ body {
 <body>
     <div class="header">
         <i class="fas fa-bars menu-icon" aria-label="Menu"></i>
-        <div class="title">BeeMazing</div>
+        <div class="title">BeeMazing 1</div>
     </div>
 
     <div id="logoutContainer" class="logout-container">
