--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -698,13 +698,14 @@ body.menu-open {
     gap: 8px;
 }
 .remove-user-btn, .edit-user-btn {
-    background: #D32F2F;
+    background: #333540;
     color: white;
     border: none;
-    border-radius: 4px;
-    width: 24px;
-    height: 24px;
-    font-size: 14px;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    font-size: 18px;
+    font-weight: bold;
     cursor: pointer;
     display: flex;
     align-items: center;
