--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -699,7 +699,7 @@ body.menu-open {
 }
 .remove-user-btn, .edit-user-btn {
     background: #333540;
-    color: white;
+    color: var(--primary-color);
     border: none;
     border-radius: 50%;
     width: 30px;
