--- a/mobile/1-Home/home.html
+++ b/mobile/1-Home/home.html
@@ -129,6 +129,7 @@ body {
     width: 100%;
     display: flex;
     justify-content: space-around;
+    align-items: center;
     background: var(--secondary-color); /* Changed to black */
     padding: 10px 0;
     box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.2);
