--- a/mobile/2-UserProfiles/usermarket.html
+++ b/mobile/2-UserProfiles/usermarket.html
@@ -251,6 +251,7 @@
     width: 100%;
     display: flex;
     justify-content: space-around;
+    align-items: center;
     background: var(--secondary-color);
     padding: 10px 0;
     box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.2);
@@ -345,15 +346,12 @@
     <div class="footer">
         <a href="#" id="homeButton" class="footer-icon active" aria-label="Home">
             <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-            <span>Home</span>
         </a>
         <a href="#" id="tasksButton" class="footer-icon" aria-label="Tasks">
             <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
-            <span>Tasks</span>
         </a>
         <a href="#" id="marketButton" class="footer-icon" aria-label="Market">
             <img src="/BeeMazing-Y1/mobile/1-Home/MarketBtn.png" alt="Market" />
-            <span>Market</span>
         </a>
     </div>
     
