--- a/mobile/4-Market/luckychest.html
+++ b/mobile/4-Market/luckychest.html
@@ -217,6 +217,7 @@
       width: 100%;
       display: flex;
       justify-content: space-around;
+      align-items: center;
       background: var(--secondary-color);
       padding: 10px 0;
       box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.2);
@@ -415,15 +416,12 @@
   <div class="footer">
     <a href="/BeeMazing-Y1/mobile/2-UserProfiles/userAdmin.html" class="footer-icon" id="homeLink" aria-label="Home">
       <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-      <span></span>
   </a>
     <a href="/BeeMazing-Y1/mobile/3-Tasks/tasks.html" id="tasksLink" class="footer-icon" aria-label="Tasks">
       <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
-      <span></span>
     </a>
     <a href="/BeeMazing-Y1/mobile/4-Market/market.html" id="marketLink" class="footer-icon" aria-label="Market">
       <img src="/BeeMazing-Y1/mobile/1-Home/MarketBtn.png" alt="Market" />
-      <span></span>
     </a>
   </div>
 
