--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -991,14 +991,13 @@
 }
 
 #logoutBtn {
-    background: transparent;
-    color: white;
-    border: none;
-    padding: 8px 14px;
-    font-size: 14px;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: background 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  background: transparent;
+  border: none;
+  cursor: pointer;
 }
 
 #logoutBtn:hover {
@@ -1007,8 +1006,8 @@
 
 
 .logout-icon {
-  width: 25px;
-  height: 25px;
+  width: 30px;
+  height: 30px;
   filter: invert(100%) brightness(150%);
   transition: transform 0.3s ease;
 }
