--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -503,6 +503,7 @@ body {
     <div class="footer">
         <a href="/BeeMazing-Y1/mobile/2-UserProfiles/userAdmin.html" class="footer-icon" id="homeLink" aria-label="Home">
             <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
+            <span>w</span>
         </a>
         <a href="/BeeMazing-Y1/mobile/3-Tasks/tasks.html" class="footer-icon" aria-label="Tasks">
             <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
@@ -612,16 +613,17 @@ const visibleTasks = tasks.filter(task => {
     }
 
     // If Specific Days exist, use that second
-    if (task.specificDays) {
-        let days = task.specificDays;
-        if (typeof days === "string") {
-            days = days.split(",").map(d => d.trim()).filter(d => d);
-        }
-        if (Array.isArray(days) && days.length > 0) {
-            const dayOfWeek = selected.toLocaleDateString(undefined, { weekday: "long" });
-            return days.includes(dayOfWeek) && inRange; // ✅ Must still be within From-To range
-        }
+// If Specific Days exist, use that second
+if (task.daysOfWeek) {
+    let days = task.daysOfWeek;
+    if (typeof days === "string") {
+        days = days.split(",").map(d => d.trim()).filter(d => d);
     }
+    if (Array.isArray(days) && days.length > 0) {
+        const dayOfWeek = selected.toLocaleDateString(undefined, { weekday: "long" });
+        return days.includes(dayOfWeek) && inRange; // ✅ Must still be within From-To range
+    }
+}
 
     // Default case: From-To
     return inRange;
