--- a/mobile/3-Tasks/addtasks.html
+++ b/mobile/3-Tasks/addtasks.html
@@ -1881,8 +1881,6 @@ window.addEventListener("click", (e) => {
 
 
 
-
-
         document.getElementById("addTaskForm").addEventListener("submit", async function (event) {
     event.preventDefault();
 
@@ -1895,16 +1893,15 @@ window.addEventListener("click", (e) => {
     const dateTo = document.getElementById("taskDateTo").value;
     const dateMode = document.getElementById("dateModeSelection").value;
     const reminder = document.getElementById("taskReminder").checked;
-    const users = document.getElementById("assignedToSelection").value
-        .split(",")
-        .map(u => u.trim())
-        .filter(u => u);
+    const users = document.getElementById("assignedToSelection").value.split(",").map(u => u.trim()).filter(u => u);
     const reward = document.getElementById("RewardValue").value;
     let timesPerDay = parseInt(document.getElementById("timesPerDayInput").value) || null;
     let timesPerWeek = parseInt(document.getElementById("timesPerWeekInput").value) || null;
     let timesPerMonth = parseInt(document.getElementById("timesPerMonthInput").value) || null;
     const specificDates = document.getElementById("specificDatesInput").value;
-    const specificDays = dateMode === "specific-days" ? selectedDays : [];
+
+    const editTask = JSON.parse(localStorage.getItem("familyApp_editTask"));
+    const currentAdmin = localStorage.getItem("currentAdminEmail");
 
     // Validations
     if (!title) {
@@ -1916,14 +1913,13 @@ window.addEventListener("click", (e) => {
         return;
     }
     if (dateMode === "date" && !dateFrom) {
-    alert("Please select a start date.");
-    return;
-}
-if (dateMode === "specific-dates" && !specificDates) {
-    alert("Please select at least one date.");
-    return;
-}
-
+        alert("Please select a start date.");
+        return;
+    }
+    if (dateMode === "specific-dates" && !specificDates) {
+        alert("Please select at least one date.");
+        return;
+    }
 
     // Cap and sanitize
     if (timesPerDay > 100) timesPerDay = 100;
@@ -1933,20 +1929,15 @@ if (dateMode === "specific-dates" && !specificDates) {
     if (timesPerWeek !== null && timesPerWeek < 1) timesPerWeek = 1;
     if (timesPerMonth !== null && timesPerMonth < 1) timesPerMonth = 1;
 
-
     let dateValue = "";
-if (dateMode === "date") {
-    const fromDate = dateFrom;
-    const toDate = dateTo || "3000-01-01";
-    dateValue = `${fromDate} to ${toDate}`;
-} else if (dateMode === "specific-dates" && specificDates) {
-    const dates = specificDates.split(",").map(d => d.trim()).filter(d => d);
-    dateValue = `${dates[0]} to ${dates[dates.length - 1]}`;
-} else {
-    const today = new Date().toISOString().split("T")[0];
-    dateValue = `${today} to 3000-01-01`;
-}
-
+    if (dateMode === "date") {
+        const fromDate = dateFrom;
+        const toDate = dateTo || "3000-01-01";
+        dateValue = `${fromDate} to ${toDate}`;
+    } else if (dateMode === "specific-dates" && specificDates) {
+        const dates = specificDates.split(",").map(d => d.trim()).filter(d => d);
+        dateValue = `${dates[0]} to ${dates[dates.length - 1]}`;
+    }
 
     const task = {
         title,
@@ -1954,7 +1945,6 @@ if (dateMode === "date") {
         room: room || undefined,
         repeat: repeat || undefined,
         settings: settings || undefined,
-        date: dateValue,
         reminder: reminder || undefined,
         users,
         reward: reward || undefined,
@@ -1962,25 +1952,25 @@ if (dateMode === "date") {
         timesPerDay: repeat === "Daily" ? timesPerDay : undefined,
         timesPerWeek: repeat === "Weekly" ? timesPerWeek : undefined,
         timesPerMonth: repeat === "Monthly" ? timesPerMonth : undefined,
-        specificDates: dateMode === "specific-dates" ? specificDates : undefined,
-daysOfWeek: dateMode === "date" ? (selectedDays.length > 0 ? selectedDays : ["Any"]) : undefined
     };
 
-    console.log("Task being saved:", JSON.stringify(task, null, 2));
-
-    const currentAdmin = localStorage.getItem("currentAdminEmail");
-    const editTask = JSON.parse(localStorage.getItem("familyApp_editTask"));
+    // Handle dates properly
+    if (dateMode === "specific-dates" && specificDates) {
+        task.specificDates = specificDates;
+        task.date = dateValue;
+    } else {
+        task.date = dateValue;
+    }
 
     try {
         const url = "https://beemazing.onrender.com/api/tasks";
         const body = editTask
             ? {
-                  adminEmail: currentAdmin,
-                  task,
-                  originalTitle: editTask.title,
-                  originalDate: editTask.date.split(" to ")[0]
-
-              }
+                adminEmail: currentAdmin,
+                task,
+                originalTitle: editTask.title,
+                originalDate: editTask.date
+            }
             : { adminEmail: currentAdmin, task };
 
         const response = await fetch(url, {
@@ -2002,6 +1992,7 @@ daysOfWeek: dateMode === "date" ? (selectedDays.length > 0 ? selectedDays : ["An
         alert(`Failed to save task: ${error.message}`);
     }
 });
+
 
 
 
