--- a/mobile/3-Tasks/addtasks.html
+++ b/mobile/3-Tasks/addtasks.html
@@ -1883,6 +1883,10 @@ window.addEventListener("click", (e) => {
 
 
 
+
+
+
+
         document.getElementById("addTaskForm").addEventListener("submit", async function (event) {
     event.preventDefault();
 
@@ -1895,37 +1899,18 @@ window.addEventListener("click", (e) => {
     const dateTo = document.getElementById("taskDateTo").value;
     const dateMode = document.getElementById("dateModeSelection").value;
     const reminder = document.getElementById("taskReminder").checked;
-    const users = document.getElementById("assignedToSelection").value
-        .split(",")
-        .map(u => u.trim())
-        .filter(u => u);
+    const users = document.getElementById("assignedToSelection").value.split(",").map(u => u.trim()).filter(u => u);
     const reward = document.getElementById("RewardValue").value;
     let timesPerDay = parseInt(document.getElementById("timesPerDayInput").value) || null;
     let timesPerWeek = parseInt(document.getElementById("timesPerWeekInput").value) || null;
     let timesPerMonth = parseInt(document.getElementById("timesPerMonthInput").value) || null;
     const specificDates = document.getElementById("specificDatesInput").value;
-    const specificDays = dateMode === "specific-days" ? selectedDays : [];
 
-    // Validations
-    if (!title) {
-        alert("Task title is required!");
-        return;
-    }
-    if (users.length === 0) {
-        alert("Please assign at least one user.");
-        return;
-    }
-    if (dateMode === "date" && !dateFrom) {
-    alert("Please select a start date.");
-    return;
-}
-if (dateMode === "specific-dates" && !specificDates) {
-    alert("Please select at least one date.");
-    return;
-}
+    if (!title) return alert("Task title is required!");
+    if (users.length === 0) return alert("Please assign at least one user.");
+    if (dateMode === "date" && !dateFrom) return alert("Please select a start date.");
+    if (dateMode === "specific-dates" && !specificDates) return alert("Please select at least one date.");
 
-
-    // Cap and sanitize
     if (timesPerDay > 100) timesPerDay = 100;
     if (timesPerWeek > 100) timesPerWeek = 100;
     if (timesPerMonth > 100) timesPerMonth = 100;
@@ -1933,20 +1918,18 @@ if (dateMode === "specific-dates" && !specificDates) {
     if (timesPerWeek !== null && timesPerWeek < 1) timesPerWeek = 1;
     if (timesPerMonth !== null && timesPerMonth < 1) timesPerMonth = 1;
 
-
     let dateValue = "";
-if (dateMode === "date") {
-    const fromDate = dateFrom;
-    const toDate = dateTo || "3000-01-01";
-    dateValue = `${fromDate} to ${toDate}`;
-} else if (dateMode === "specific-dates" && specificDates) {
-    const dates = specificDates.split(",").map(d => d.trim()).filter(d => d);
-    dateValue = `${dates[0]} to ${dates[dates.length - 1]}`;
-} else {
-    const today = new Date().toISOString().split("T")[0];
-    dateValue = `${today} to 3000-01-01`;
-}
-
+    if (dateMode === "date") {
+        const fromDate = dateFrom;
+        const toDate = dateTo || "3000-01-01";
+        dateValue = `${fromDate} to ${toDate}`;
+    } else if (dateMode === "specific-dates" && specificDates) {
+        const dates = specificDates.split(",").map(d => d.trim()).filter(d => d);
+        dateValue = `${dates[0]} to ${dates[dates.length - 1]}`;
+    } else {
+        const today = new Date().toISOString().split("T")[0];
+        dateValue = `${today} to 3000-01-01`;
+    }
 
     const task = {
         title,
@@ -1963,10 +1946,8 @@ if (dateMode === "date") {
         timesPerWeek: repeat === "Weekly" ? timesPerWeek : undefined,
         timesPerMonth: repeat === "Monthly" ? timesPerMonth : undefined,
         specificDates: dateMode === "specific-dates" ? specificDates : undefined,
-daysOfWeek: dateMode === "date" ? (selectedDays.length > 0 ? selectedDays : ["Any"]) : undefined
+        daysOfWeek: dateMode === "date" ? (selectedDays.length > 0 && !selectedDays.includes("Any") ? selectedDays : undefined) : undefined
     };
-
-    console.log("Task being saved:", JSON.stringify(task, null, 2));
 
     const currentAdmin = localStorage.getItem("currentAdminEmail");
     const editTask = JSON.parse(localStorage.getItem("familyApp_editTask"));
@@ -1974,14 +1955,10 @@ daysOfWeek: dateMode === "date" ? (selectedDays.length > 0 ? selectedDays : ["An
     try {
         const url = "https://beemazing.onrender.com/api/tasks";
         const body = editTask
-            ? {
-                  adminEmail: currentAdmin,
-                  task,
-                  originalTitle: editTask.title,
-                  originalDate: editTask.date
-              }
+            ? { adminEmail: currentAdmin, task, originalTitle: editTask.title, originalDate: editTask.date }
             : { adminEmail: currentAdmin, task };
 
+        console.log("Saving task:", JSON.stringify(body, null, 2));
         const response = await fetch(url, {
             method: editTask ? "PUT" : "POST",
             headers: { "Content-Type": "application/json" },
@@ -1989,9 +1966,9 @@ daysOfWeek: dateMode === "date" ? (selectedDays.length > 0 ? selectedDays : ["An
         });
 
         const data = await response.json();
+        console.log("Backend response:", JSON.stringify(data, null, 2));
         if (!response.ok) throw new Error(data.error || `HTTP error ${response.status}`);
 
-        console.log("Server response:", data);
         localStorage.removeItem("familyApp_editTask");
         localStorage.removeItem("familyApp_editTask_index");
         alert("Task saved successfully!");
@@ -2001,6 +1978,14 @@ daysOfWeek: dateMode === "date" ? (selectedDays.length > 0 ? selectedDays : ["An
         alert(`Failed to save task: ${error.message}`);
     }
 });
+
+
+
+
+
+
+
+
 
 
 
