--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -503,7 +503,7 @@ body {
     <div class="footer">
         <a href="/BeeMazing-Y1/mobile/2-UserProfiles/userAdmin.html" class="footer-icon" id="homeLink" aria-label="Home">
             <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-            <span>w</span>
+            <span>w1</span>
         </a>
         <a href="/BeeMazing-Y1/mobile/3-Tasks/tasks.html" class="footer-icon" aria-label="Tasks">
             <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
@@ -520,6 +520,8 @@ body {
 
 // Append admin and user query parameters to Home link
 document.addEventListener("DOMContentLoaded", () => {
+    localStorage.removeItem("familyApp_editTask");
+    localStorage.removeItem("familyApp_editTask_index");
     const homeLink = document.getElementById("homeLink");
     const urlParams = new URLSearchParams(window.location.search);
     const admin = urlParams.get("admin");
@@ -596,40 +598,33 @@ if (typeof calculateIndividualProgress === 'undefined') {
 
 
 
-const visibleTasks = tasks.filter(task => {
-    if (!task.date) return false;
+        const visibleTasks = tasks.filter(task => {
+    if (!task.date && !task.specificDates) {
+        console.warn("Task missing date and specificDates:", task);
+        return false;
+    }
 
-    // Parse the From/To range
-    const range = task.date.split(" to ");
-    const from = parseLocalDate(range[0]);
-    const to = range[1] ? parseLocalDate(range[1]) : new Date(3000, 0, 1);
-
-    const inRange = selected >= from && selected <= to;
-
-    // If Specific Dates exist, use that first
     if (task.specificDates) {
         const specificDates = task.specificDates.split(",").map(date => date.trim());
         return specificDates.includes(selectedDate);
     }
 
-    // If Specific Days exist, use that second
-// If Specific Days exist, use that second
-if (task.daysOfWeek) {
-    let days = task.daysOfWeek;
-    if (typeof days === "string") {
-        days = days.split(",").map(d => d.trim()).filter(d => d);
-    }
-    if (Array.isArray(days) && days.length > 0) {
-        const dayOfWeek = selected.toLocaleDateString(undefined, { weekday: "long" });
-        return days.includes(dayOfWeek) && inRange; // ✅ Must still be within From-To range
-    }
-}
+    const range = task.date.split(" to ");
+    const from = parseLocalDate(range[0]);
+    const to = range[1] ? parseLocalDate(range[1]) : new Date(3000, 0, 1);
+    const inRange = selected >= from && selected <= to;
 
-    // Default case: From-To
+    if (task.daysOfWeek) {
+        let days = task.daysOfWeek;
+        if (typeof days === "string") days = days.split(",").map(d => d.trim()).filter(d => d);
+        if (Array.isArray(days) && days.length > 0) {
+            const dayOfWeek = selected.toLocaleDateString(undefined, { weekday: "long" });
+            return days.includes(dayOfWeek) && inRange;
+        }
+    }
+
     return inRange;
 });
-
-
 
 
 
